[package]
name = "mini-hyper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvm-ioctls = "0.11.0"
kvm-bindings = "0.5.0"
nix = "0.23.1"
libc = "0.2.113"
bitflags = "1.3.2"
bitvec = "1"
capstone = "0.10.0"
goblin = "0.5.1"
